--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>6.8</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.2.28</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
